[gd_scene load_steps=8 format=2]

[ext_resource path="res://popups/tuto01.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/9path_frame.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/9path_frame_small.png" type="Texture" id=3]
[ext_resource path="res://assets/font/AbyssinicaSIL-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/up_arrow.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=2]
size = 40
outline_color = Color( 0.2, 0.2, 0.2, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 44
outline_color = Color( 0.2, 0.2, 0.2, 1 )
font_data = ExtResource( 4 )

[node name="tuto01" type="CanvasLayer"]
layer = 3
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -249.0
color = Color( 0.0136719, 0, 0.0820313, 0.588235 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 650.0
color = Color( 0.0117647, 0, 0.0823529, 0.0313726 )

[node name="Panel" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -347.0
margin_top = -253.0
margin_right = 347.0
margin_bottom = 93.0
color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="Panel"]
modulate = Color( 0.721569, 0.72549, 0.631373, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -18.0
margin_top = -10.0
margin_right = 20.0
margin_bottom = 16.0
texture = ExtResource( 2 )
patch_margin_left = 128
patch_margin_top = 127
patch_margin_right = 132
patch_margin_bottom = 129

[node name="lb_name2" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 16.0
margin_right = -4.0
margin_bottom = -17.0
custom_colors/font_color = Color( 0.823529, 0.823529, 0.823529, 1 )
custom_fonts/font = SubResource( 2 )
text = "MOVIMIENTO
Puedes seleccionar a tus personajes cliqueando sobre ellos.
Luego, utiliza las teclas WASD para mover al personaje que tengas seleccionado."
align = 1
autowrap = true
clip_text = true

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = 143.5
margin_right = 76.5
margin_bottom = 268.5
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Panel/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )

[node name="lb_name2" type="Label" parent="Panel/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.780392, 0.803922, 0.486275, 1 )
custom_fonts/font = SubResource( 1 )
text = "OK"
align = 1
valign = 1
clip_text = true

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -5.0
margin_right = 26.0
margin_bottom = 7.0
texture = ExtResource( 3 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="Arrow1" type="TextureRect" parent="."]
margin_left = 224.0
margin_top = 678.0
margin_right = 288.0
margin_bottom = 742.0
rect_rotation = 143.831
texture = ExtResource( 5 )

[node name="Arrow2" type="TextureRect" parent="."]
margin_left = 224.0
margin_top = 678.0
margin_right = 288.0
margin_bottom = 742.0
rect_rotation = 143.831
texture = ExtResource( 5 )

[node name="Arrow3" type="TextureRect" parent="."]
margin_left = 224.0
margin_top = 678.0
margin_right = 288.0
margin_bottom = 742.0
rect_rotation = 143.831
texture = ExtResource( 5 )
